[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/Main_character_idle.png" type="Texture" id=2]
[ext_resource path="res://misc/fonts/font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/player/UI.gd" type="Script" id=4]
[ext_resource path="res://misc/fonts/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.00002
height = 16.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="InteractRange" type="Area2D" parent="."]

[node name="DetectionShape" type="CollisionShape2D" parent="InteractRange"]
position = Vector2( 0, 24 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="PopupPivot" type="Position2D" parent="."]
visible = false
position = Vector2( 0, -40 )

[node name="PopupLabel" type="Label" parent="PopupPivot"]
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "E"
align = 1
valign = 1

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Window" type="ColorRect" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -105.0
margin_right = 225.0
margin_bottom = 105.0
mouse_filter = 2
color = Color( 0.207843, 0.254902, 0.333333, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Window"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="UI/Window/VBoxContainer"]
margin_right = 450.0
margin_bottom = 120.0
rect_min_size = Vector2( 450, 120 )
custom_fonts/font = ExtResource( 5 )
text = "Go home and sleep?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Window/VBoxContainer"]
margin_top = 124.0
margin_right = 450.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 90 )
alignment = 1

[node name="Yes" type="TextureButton" parent="UI/Window/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 176.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Spacer" type="Control" parent="UI/Window/VBoxContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 270.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
mouse_filter = 2

[node name="No" type="TextureButton" parent="UI/Window/VBoxContainer/HBoxContainer"]
margin_left = 274.0
margin_right = 364.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
texture_normal = ExtResource( 6 )
expand = true

[connection signal="area_entered" from="InteractRange" to="." method="_on_InteractRange_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_InteractRange_area_exited"]
[connection signal="button_down" from="UI/Window/VBoxContainer/HBoxContainer/Yes" to="UI" method="_on_Yes_button_down"]
[connection signal="button_down" from="UI/Window/VBoxContainer/HBoxContainer/No" to="UI" method="_on_No_button_down"]
